--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="mdl-navigation__link" href="https://colleimadcat.com/">主页</a>
             <a class="mdl-navigation__link needcomingsoon">博客</a>
             <a class="mdl-navigation__link" href="https://wiki.colleimadcat.com/">Wiki</a>
-            <a class="mdl-navigation__link needcomingsoon" >工具</a>
+            <a class="mdl-navigation__link" href="https://site.colleimadcat.com/" >工具</a>
           </nav>
           <button id="demo-menu-lower-right" class="mdl-button mdl-js-button mdl-button--icon">
             <i class="material-icons">more_vert</i>
@@ -48,7 +48,7 @@
             <i class="material-icons">bookmarks</i>&nbsp;博客</a>
           <a class="mdl-navigation__link" href="https://wiki.colleimadcat.com/">
             <i class="material-icons">menu_book</i>&nbsp;Wiki</a>
-          <a class="mdl-navigation__link needcomingsoon" id="tools">
+          <a class="mdl-navigation__link" href="https://site.colleimadcat.com/" id="tools">
             <i class="material-icons">build</i>&nbsp;工具</a>
         </nav>
       </div>
