--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta http-equiv="content-type" content="text/html;" charset="utf-8">
     <title>Mario ID Color Genreator - Collei_Madcat</title>
+    <link rel="shortcut icon" href="https://colleimadcat.com/resource/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js">
     </script>
     <script src="js/data.js"></script>
-    <link rel="stylesheet" href="https://site.colleimadcat.com/css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="https://colleimadcat.com/css/style.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
   </head>
@@ -241,8 +242,8 @@
                 <i class="material-icons">language</i>
               </button>
               <ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" for="language">
-                <li class="mdl-menu__item">English (US)</li>
-                <li class="mdl-menu__item">简体中文（中国）</li>
+                <li class="mdl-menu__item" onclick="responseXML(xhr_enUS,'../lang/en_us.xml')">English (US)</li>
+                <li class="mdl-menu__item" onclick="responseXML(xhr_zhCN,'../lang/zh_cn.xml')">简体中文（中国）</li>
               </ul>
               <button type="button" id="about" class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect mdl-shadow--3dp">
                 <i class="material-icons">info_outlined</i>
@@ -286,10 +287,11 @@
         <button type="button" class="mdl-button">关闭</button>
       </div>
     </dialog>
-    <script src="https://site.colleimadcat.com/js/componets/comingsoon.js"></script>
+    <script src="https://colleimadcat.com/js/componets/comingsoon.js"></script>
     <script src="js/componets/about.js"></script>
     <script src="js/cghint.js"></script>
     <script src="js/querybind.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/language.js"></script>
   </body>
 </html>
